--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,14 @@ apply plugin: 'spring-boot'
 repositories {
     mavenCentral()
     mavenLocal()
-    maven { url "http://repo.spring.io/libs-release" }
 }
 
 dependencies {
-    compile("org.springframework:spring-context:4.1.1.RELEASE")
-    compile("org.springframework:spring-webmvc:4.1.1.RELEASE")
-    compile("org.springframework:spring-web:4.1.1.RELEASE")
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("javax.ws.rs:javax.ws.rs-api:2.0-m01")
-    
+    compile 'org.springframework:spring-context:4.1.1.RELEASE'
+    compile 'org.springframework:spring-webmvc:4.1.1.RELEASE'
+    compile 'org.springframework:spring-web:4.1.1.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.1.8.RELEASE'
+    compile 'com.sun.jersey:jersey-server:1.18'
+    compile 'com.sun.jersey:jersey-core:1.18'
+    compile 'com.sun.jersey:jersey-servlet:1.18'
 }
