--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,24 @@ dependencies {
     compile 'com.sun.jersey:jersey-servlet:1.18'
     compile 'org.apache.derby:derby:10.11.1.1'
     compile 'org.hibernate:hibernate-entitymanager:4.3.6.Final'
+    compile 'commons-cli:commons-cli:1.2'
+    compile 'junit:junit:4.11'
+    compile 'org.easymock:easymock:3.2'
+}
+
+////////////////////////////
+// JAR Creation Functions //
+////////////////////////////
+
+task emManagerJAR(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'em.EvilMusicApp',
+                   'version' : version
+    }
+
+    from(sourceSets.main.output) {
+        exclude 'em/controllers'
+    }
 }
 
 //////////////////////
