[#15]  * Added new preferences for derby home and derby rollback  * Added utility functions to convert java wrappers to primitives  * Songs' lengths are now stored in milliseconds instead of seconds  * Created progress bar that will update as a song plays

--- a/.jshintrc
+++ b/.jshintrc
@@ -29,7 +29,5 @@
     /* Environments */
     /* ************ */
 
-    "devel" : true,
-    "predef" : ["angular", "AV"]
-
+    "predef" : ["alert", "angular", "AV", "document"]
 }
