[#11]  * Moved the client side queue management code into its own AngularJS service  * Renamed the /src/main/webapp/shared folder as /src/main/webapp/components  * Created client-side service for utility functions  * Moved the REST URL for clearing the queue from "DELETE /rest/queue/{queueID}" to "DELETE /rest/queue/{queueID}/elements"

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "maxerr" : 1000,
 
         "predef" : [
+            "afterEach",
             "alert",
             "angular",
             "AV",
