[#11]  * Moved the EQ code from emcontroller to a service.  Stuff will still not play until the player service is up and running  * moved the hertzToString and millisToString functions from emcontroller to the utils service

--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
             "expect",
             "inject",
             "it",
-            "module"
+            "jasmine",
+            "module",
+            "spyOn"
         ]
     }
 }
