--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
+apply plugin: 'lesscss'
 
 //////////////
 // Settings //
@@ -15,7 +16,7 @@ sourceCompatibility = '1.7'
 version = '0.1.a'
 applicationDefaultJvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000"]
 
-/** Necessary to set the embedded Tomcat version. */
+/* Necessary to set the embedded Tomcat version. */
 configurations.all {
   resolutionStrategy.eachDependency { DependencyResolveDetails details ->
     if (details.requested.group == 'org.apache.tomcat.embed') {
@@ -51,10 +52,10 @@ dependencies {
 }
 
 //////////////////////
-// Custom Functions //
+// Plugin Functions //
 //////////////////////
 
-/** Necessary for the spring-boot plugin. */
+/* Necessary for the spring-boot plugin. */
 buildscript {
     repositories {
         maven { url "http://repo.spring.io/libs-release" }
@@ -62,6 +63,34 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        // Necessary For Spring Boot
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.1.8.RELEASE'
+
+        // Necessary For LESS
+        classpath 'de.obqo.gradle:gradle-lesscss-plugin:1.0-1.3.3'
     }
+}
+
+///////////
+// Tasks //
+///////////
+
+/* LESS Task */
+lesscss {
+    source = fileTree('src/main/webapp/assets/less') {
+        include '*.less'
+    }
+    dest = 'src/main/webapp/assets/css'
+    compress = false
+}
+
+processResources {
+    // 'lesscss' will be invoked every time 'processResources' is invoked
+    dependsOn 'lesscss'
+}
+
+
+war {
+    // Ensures LESS files do not make it into the WAR
+    exclude 'assets/less'
 }
