[#33] Added more support for running integration tests...  * Can now specify a port for the server to run in the properties file  * Updated the configuration files to specify their server ports  * Added another (fairly lame) proof-of-concept REST test

--- a/config/dev.properties
+++ b/config/dev.properties
@@ -2,3 +2,4 @@ em.music_directories=$home/Music
 em.database.home=$home/derbyhome
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
+em.server.port=8080
