[closes #33] Finished adding support for running automated integration tests...  * Can now specify the derby home directory to contain a timestamp  * Updated documentation for the $timestamp keyword in the derby home property value

--- a/config/int-test.properties
+++ b/config/int-test.properties
@@ -1,5 +1,5 @@
 em.music_directories=$home/Music
-em.database.home=$home/derbyhome
+em.database.home=$home/integration-databases/$timestamp
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
 em.server.port=8085
