--- a/src/main/resources/em.properties
+++ b/src/main/resources/em.properties
@@ -2,3 +2,4 @@ em.music_directories=$home/Music
 em.database.home=$home/derbyhome
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
+em.server.port=8080
