--- a/package.json
+++ b/package.json
@@ -1,53 +1,62 @@
 {
-    "name": "evilmusic",
-    "description": "A web-based music player for lossless formats",
-    "author": "eviljoe",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/eviljoe/evilmusic.git"
-        },
-    "license": "",
-    "bugs": {
-        "url": "https://github.com/eviljoe/evilmusic/issues"
-    },
-    "homepage": "https://github.com/eviljoe/evilmusic",
-    "devDependencies": {
-        "angular": "^1.3.5",
-        "angular-mocks": "^1.3.5",
-        "jasmine-core": "^2.1.3",
-        "karma": "^0.12.28",
-        "karma-jasmine": "^0.3.2",
-        "karma-phantomjs-launcher": "^0.1.4",
-        "phantomjs": "^1.9.12"
-    },
-    "jshintConfig" : {
-        "camelcase" : true,
-        "curly" : true,
-        "eqeqeq" : true,
-        "newcap" : true,
-        "latedef" : true,
-        "noempty" : true,
-        "nonew" : true,
-        "quotmark" : "single",
-        "undef" : true,
-        "unused" : "vars",
-        "strict" : true,
-        "maxcomplexity" : 10,
-
-        "predef" : [
-            "afterEach",
-            "alert",
-            "angular",
-            "AV",
-            "beforeEach",
-            "describe",
-            "document",
-            "expect",
-            "inject",
-            "it",
-            "jasmine",
-            "module",
-            "spyOn"
-        ]
-    }
+  "name": "evilmusic",
+  "description": "A web-based music player for lossless formats",
+  "author": "eviljoe",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eviljoe/evilmusic.git"
+  },
+  "license": "",
+  "bugs": {
+    "url": "https://github.com/eviljoe/evilmusic/issues"
+  },
+  "homepage": "https://github.com/eviljoe/evilmusic",
+  "devDependencies": {
+    "angular": "^1.3.5",
+    "angular-bootstrap": "^0.12.0",
+    "angular-mocks": "^1.3.5",
+    "angular-resource": "^1.3.5",
+    "bootstrap": "^3.3.2",
+    "del": "^1.1.1",
+    "gulp-angular-templatecache": "^1.5.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-karma": "0.0.4",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-watch": "^4.1.1",
+    "jasmine-core": "^2.1.3",
+    "jquery": "2.1.3",
+    "karma": "^0.12.28",
+    "karma-jasmine": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.12"
+  },
+  "jshintConfig": {
+    "camelcase": true,
+    "curly": true,
+    "eqeqeq": true,
+    "newcap": true,
+    "latedef": true,
+    "noempty": true,
+    "nonew": true,
+    "quotmark": "single",
+    "undef": true,
+    "unused": "vars",
+    "strict": true,
+    "maxcomplexity": 10,
+    "predef": [
+      "afterEach",
+      "alert",
+      "angular",
+      "AV",
+      "beforeEach",
+      "describe",
+      "document",
+      "expect",
+      "inject",
+      "it",
+      "jasmine",
+      "module",
+      "spyOn"
+    ]
+  }
 }
