--- a/config/int-test.properties
+++ b/config/int-test.properties
@@ -1,4 +1,4 @@
-em.music_directories=$home/Music
+em.music_directories=$classpath./test-songs
 em.database.home=$home/integration-databases/$timestamp
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
