[#37] Now using AOP for logging REST Endpoint calls and DAO calls.  Also...  * Added preference for the log file (defaults to $home/.evilmusic/evilmusic.log)  * The DB home now defaults to $home/.evilmusic/db

--- a/config/dev.properties
+++ b/config/dev.properties
@@ -19,3 +19,4 @@ em.database.home=$home/derbyhome
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
 em.server.port=8080
+em.log_file=evilmusic.log
