--- a/src/main/resources/em.properties
+++ b/src/main/resources/em.properties
@@ -15,7 +15,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 em.music_directories=$home/Music
-em.database.home=$home/derbyhome
+em.database.home=$home/.evilmusic/db
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
 em.server.port=8080
+em.log_file=$home/.evilmusic/evilmusic.log
