--- a/config/int-test.properties
+++ b/config/int-test.properties
@@ -19,3 +19,4 @@ em.database.home=$home/integration-databases/$timestamp
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
 em.server.port=8085
+em.log_file=evilmusic.log
