[37] Fixed problem where the log file couldn't actually use normal properties keywords.  Also...  * The DB will now be stored in the current directory when running in dev mode  * Added gradle tasks so EvilMusic can be started in one task in dev mode and integration test mode

--- a/build.gradle
+++ b/build.gradle
@@ -152,6 +152,16 @@ task configIntTest {
     doFirst { configFile = 'config/int-test.properties' }
 }
 
+/* Creates a task that will start Spring Boot after configuring using the integration test properties file. */
+task bootRunIntTest {
+	dependsOn 'configIntTest', 'bootRun'
+}
+
+/* Creates a task that will start Spring Boot after configuring using the development properties file. */
+task bootRunDev {
+	dependsOn 'configDev', 'bootRun'
+}
+
 bootRun {
     mustRunAfter 'configDev'
     mustRunAfter 'configIntTest'
