--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "curly": true,
     "eqeqeq": true,
     "newcap": true,
-    "latedef": true,
+    "latedef": "nofunc",
     "noempty": true,
     "nonew": true,
     "quotmark": "single",
@@ -56,6 +56,7 @@
       "it",
       "jasmine",
       "module",
+      "require",
       "spyOn"
     ]
   }
