[#38] All directive, filter, and resource factories now use ES6 classes.

--- a/.jshintrc
+++ b/.jshintrc
@@ -28,6 +28,8 @@
         "describe",
         "document",
         "expect",
+        "fdescribe",
+        "fit",
         "inject",
         "it",
         "jasmine",
