--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.0.1",
     "karma": "^0.12.28",
+    "karma-babel-preprocessor": "^5.2.2",
+    "karma-browserify": "^4.3.0",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.12",
