[#38] No longer allowing any fields on the global scope.  Using browserify-shim to allow all global variables to be "imported."  Also...  * The gulpfile is now in ES6  * Now using lodash for utility functions in JavaScript  * Added some more unit tests for the queues service

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,22 +19,5 @@
     "jasmine": true,
     "jquery": true,
     "module": true,
-    "predef": [
-        "afterEach",
-        "alert",
-        "angular",
-        "AV",
-        "beforeEach",
-        "describe",
-        "document",
-        "expect",
-        "fdescribe",
-        "fit",
-        "inject",
-        "it",
-        "jasmine",
-        "module",
-        "require",
-        "spyOn"
-    ]
+    "predef": []
 }
