--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
     "url": "https://github.com/eviljoe/evilmusic/issues"
   },
   "homepage": "https://github.com/eviljoe/evilmusic",
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "angular": "global:angular",
+    "av": "global:AV",
+    "lodash": "global:_"
+  },
   "devDependencies": {
     "angular": "^1.3.5",
     "angular-bootstrap": "^0.12.0",
     "angular-mocks": "^1.3.5",
     "angular-resource": "^1.3.5",
+    "babel-core": "^5.8.24",
     "babelify": "^6.2.0",
     "bootstrap": "^3.3.2",
     "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.10",
     "del": "^1.1.1",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-concat": "^2.5.2",
@@ -36,6 +48,7 @@
     "karma-browserify": "^4.3.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.1.4",
+    "lodash": "^3.10.1",
     "phantomjs": "^1.9.12",
     "vinyl-source-stream": "^1.1.0"
   }
