--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browserify": "^11.0.1",
     "browserify-shim": "^3.8.10",
     "del": "^1.1.1",
+    "font-awesome": "^4.4.0",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-concat": "^2.5.2",
     "gulp-jscs": "^2.0.0",
