--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^3.10.1",
     "phantomjs": "^1.9.12",
+    "run-sequence": "^1.1.3",
     "vinyl-source-stream": "^1.1.0"
   }
 }
