--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "lodash": "global:_"
   },
   "devDependencies": {
-    "angular": "^1.3.5",
+    "angular": "1.4.6",
     "angular-bootstrap": "^0.12.0",
-    "angular-mocks": "^1.3.5",
-    "angular-resource": "^1.3.5",
+    "angular-mocks": "1.4.6",
+    "angular-resource": "1.4.6",
     "babel-core": "^5.8.24",
     "babelify": "^6.2.0",
     "bootstrap": "^3.3.2",
