--- a/package.json
+++ b/package.json
@@ -1,60 +1,61 @@
 {
-    "name": "evilmusic",
-    "description": "A web-based music player for lossless formats",
-    "author": "eviljoe",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/eviljoe/evilmusic.git"
-    },
-    "license": "",
-    "bugs": {
-        "url": "https://github.com/eviljoe/evilmusic/issues"
-    },
-    "homepage": "https://github.com/eviljoe/evilmusic",
-    "scripts": {
-        "test": "gulp test"
-    },
-    "browserify": {
-        "transform": [
-            "browserify-shim"
-        ]
-    },
-    "browserify-shim": {
-        "angular": "global:angular",
-        "av": "global:AV",
-        "lodash": "global:_"
-    },
-    "devDependencies": {
-        "angular": "1.4.6",
-        "angular-bootstrap": "^0.12.0",
-        "angular-mocks": "1.4.6",
-        "angular-resource": "1.4.6",
-        "babel-core": "^5.8.24",
-        "babelify": "^6.2.0",
-        "bootstrap": "^3.3.2",
-        "browserify": "^11.0.1",
-        "browserify-shim": "^3.8.10",
-        "del": "^1.1.1",
-        "font-awesome": "^4.4.0",
-        "gulp-angular-templatecache": "^1.5.0",
-        "gulp-concat": "^2.5.2",
-        "gulp-jscs": "^2.0.0",
-        "gulp-jshint": "^1.11.2",
-        "gulp-karma": "0.0.4",
-        "gulp-sourcemaps": "^1.5.0",
-        "gulp-watch": "^4.1.1",
-        "jasmine-core": "^2.3.4",
-        "jquery": "2.1.3",
-        "jshint": "^2.8.0",
-        "jshint-stylish": "^2.0.1",
-        "karma": "^0.12.28",
-        "karma-babel-preprocessor": "^5.2.2",
-        "karma-browserify": "^4.3.0",
-        "karma-jasmine": "^0.3.6",
-        "karma-phantomjs-launcher": "^0.1.4",
-        "lodash": "^3.10.1",
-        "phantomjs": "^1.9.18",
-        "run-sequence": "^1.1.3",
-        "vinyl-source-stream": "^1.1.0"
-    }
+  "name": "evilmusic",
+  "description": "A web-based music player for lossless formats",
+  "author": "eviljoe",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eviljoe/evilmusic.git"
+  },
+  "license": "",
+  "bugs": {
+    "url": "https://github.com/eviljoe/evilmusic/issues"
+  },
+  "homepage": "https://github.com/eviljoe/evilmusic",
+  "scripts": {
+    "test": "gulp test"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "angular": "global:angular",
+    "av": "global:AV",
+    "lodash": "global:_"
+  },
+  "devDependencies": {
+    "angular": "1.4.6",
+    "angular-bootstrap": "^0.12.0",
+    "angular-mocks": "1.4.6",
+    "angular-resource": "1.4.6",
+    "babel-core": "^5.8.24",
+    "babelify": "^6.2.0",
+    "bootstrap": "^3.3.2",
+    "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.10",
+    "del": "^1.1.1",
+    "font-awesome": "^4.4.0",
+    "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.5.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-jscs": "^2.0.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-karma": "0.0.4",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-watch": "^4.1.1",
+    "jasmine-core": "^2.3.4",
+    "jquery": "2.1.3",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "^2.0.1",
+    "karma": "^0.12.28",
+    "karma-babel-preprocessor": "^5.2.2",
+    "karma-browserify": "^4.3.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "lodash": "^3.10.1",
+    "phantomjs": "^1.9.18",
+    "run-sequence": "^1.1.3",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
