--- a/build.gradle
+++ b/build.gradle
@@ -24,17 +24,16 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
-apply plugin: 'lesscss'
 
 //////////////
 // Settings //
 //////////////
 
-// Sets the Java source version to Java v1.7
-sourceCompatibility = '1.7'
+// Sets the Java source version to Java v1.8
+sourceCompatibility = '1.8'
 
 // The current version of EvilMusic
-version = '0.1.a'
+version = '0.1.0'
 
 // Allows Tomcat to be debuged
 applicationDefaultJvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000"]
@@ -109,9 +108,6 @@ buildscript {
     dependencies {
         // Necessary For Spring Boot
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.1.8.RELEASE'
-
-        // Necessary For LESS
-        classpath 'de.obqo.gradle:gradle-lesscss-plugin:1.0-1.3.3'
     }
 }
 
@@ -123,23 +119,6 @@ buildscript {
 task intTest(type: Test) {
     testClassesDir = sourceSets.intTest.output.classesDir
     classpath = sourceSets.intTest.runtimeClasspath
-}
-
-/* LESS Task */
-lesscss {
-    source = fileTree('src/main/webapp/assets/less') {
-        include '*.less'
-    }
-    dest = 'src/main/webapp/assets/css'
-    compress = false
-}
-
-processResources {
-    dependsOn 'lesscss' // 'lesscss' will be invoked every time 'processResources' is invoked
-}
-
-war {
-    exclude 'assets/less' // Ensures LESS files do not make it into the WAR
 }
 
 /* Configures the "bootRun" task to start EvilMusic with the development test properties file. */
