--- a/build.gradle
+++ b/build.gradle
@@ -71,15 +71,10 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework:spring-context:4.1.1.RELEASE'
-    compile 'org.springframework:spring-webmvc:4.1.1.RELEASE'
-    compile 'org.springframework:spring-web:4.1.1.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-web:1.1.8.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.8.RELEASE'
     compile 'org.springframework.boot:spring-boot-autoconfigure:1.1.8.RELEASE'
-    compile 'com.sun.jersey:jersey-server:1.18'
-    compile 'com.sun.jersey:jersey-core:1.18'
-    compile 'com.sun.jersey:jersey-servlet:1.18'
+    compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
     compile 'org.apache.derby:derby:10.11.1.1'
     compile 'org.hibernate:hibernate-entitymanager:4.3.6.Final'
     compile 'commons-cli:commons-cli:1.2'
