--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/eviljoe/evilmusic.git"
   },
-  "license": "",
+  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/eviljoe/evilmusic/issues"
   },
@@ -29,33 +29,36 @@
     "angular-bootstrap": "^0.12.0",
     "angular-mocks": "1.4.6",
     "angular-resource": "1.4.6",
-    "babel-core": "^5.8.24",
-    "babelify": "^6.2.0",
-    "bootstrap": "^3.3.2",
-    "browserify": "^11.0.1",
-    "browserify-shim": "^3.8.10",
-    "del": "^1.1.1",
-    "font-awesome": "^4.4.0",
+    "babel-core": "^6.3.21",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "bootstrap": "^3.3.6",
+    "browserify": "^12.0.1",
+    "browserify-shim": "^3.8.11",
+    "del": "^2.2.0",
+    "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.5.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-jscs": "^2.0.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-karma": "0.0.4",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-watch": "^4.1.1",
-    "jasmine-core": "^2.3.4",
+    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-karma": "0.0.5",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-watch": "^4.3.5",
+    "jasmine-core": "^2.4.1",
     "jquery": "2.1.3",
     "jshint": "^2.8.0",
-    "jshint-stylish": "^2.0.1",
-    "karma": "^0.12.28",
-    "karma-babel-preprocessor": "^5.2.2",
-    "karma-browserify": "^4.3.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "lodash": "^3.10.1",
-    "phantomjs": "^1.9.18",
-    "run-sequence": "^1.1.3",
+    "jshint-stylish": "^2.1.0",
+    "karma": "^0.13.15",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^4.4.2",
+    "karma-jasmine": "*",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "lodash": "*",
+    "phantomjs": "^1.9.19",
+    "run-sequence": "^1.1.5",
+    "vinyl-fs": "^2.2.1",
     "vinyl-source-stream": "^1.1.0"
   }
 }
