--- a/package.json
+++ b/package.json
@@ -41,21 +41,19 @@
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
     "gulp-karma": "0.0.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.4.1",
     "jquery": "2.1.3",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.1.0",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^4.4.2",
-    "karma-jasmine": "*",
+    "karma-jasmine": "0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "lodash": "*",
+    "lodash": "3.10.1",
     "phantomjs": "^1.9.19",
     "run-sequence": "^1.1.5",
     "vinyl-fs": "^2.2.1",
