--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/eviljoe/evilmusic.git"
   },
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/eviljoe/evilmusic/issues"
   },
@@ -24,21 +24,35 @@
     "av": "global:AV",
     "lodash": "global:_"
   },
-  "devDependencies": {
-    "angular": "1.4.6",
+  "dependencies": {
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/upgrade": "^2.0.0-rc.1",
+    "angular": "^1.5.5",
     "angular-bootstrap": "^0.12.0",
-    "angular-mocks": "1.4.6",
     "angular-resource": "1.4.6",
     "babel-core": "^6.3.21",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "bootstrap": "^3.3.6",
+    "es6-shim": "^0.35.1",
+    "font-awesome": "^4.5.0",
+    "jquery": "2.1.3",
+    "lodash": "3.10.1",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.6",
+    "zone.js": "^0.6.12"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.4.6",
     "browserify": "^12.0.1",
     "browserify-shim": "^3.8.11",
     "del": "^2.2.0",
-    "font-awesome": "^4.5.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^2.0.0",
@@ -47,13 +61,11 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.4.1",
-    "jquery": "2.1.3",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^4.4.2",
     "karma-jasmine": "0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "lodash": "3.10.1",
     "phantomjs": "^1.9.19",
     "run-sequence": "^1.1.5",
     "vinyl-fs": "^2.2.1",
