--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     ]
   },
   "browserify-shim": {
-    "angular": "global:angular",
-    "av": "global:AV",
-    "lodash": "global:_"
+    "av": "global:AV"
   },
   "dependencies": {
     "@angular/common": "^2.0.0-rc.1",
@@ -32,8 +30,6 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/upgrade": "^2.0.0-rc.1",
-    "angular": "^1.5.5",
-    "angular-bootstrap": "^0.12.0",
     "angular-resource": "1.4.6",
     "babel-core": "^6.3.21",
     "babel-polyfill": "^6.3.14",
@@ -42,24 +38,23 @@
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.1",
     "font-awesome": "^4.5.0",
-    "jquery": "2.1.3",
-    "lodash": "3.10.1",
+    "jquery": "2.2.3",
+    "lodash": "4.12.0",
+    "ng2-bootstrap": "1.0.16",
     "reflect-metadata": "^0.1.2",
     "rxjs": "^5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular-mocks": "1.4.6",
-    "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.11",
+    "browserify": "13.0.1",
+    "browserify-shim": "3.8.12",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^3.0.2",
     "gulp-karma": "0.0.5",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.15",
