[#53] Updated ng1 unit tests for ng2
Updated the client-side unit tests for the new code involved with Angular 2.

--- a/.eslintrc
+++ b/.eslintrc
@@ -115,7 +115,7 @@
         "no-catch-shadow": ["error"],
         "no-delete-var": ["error"],
         "no-label-var": ["error"],
-        "no-restricted-globals": ["warn", "window", "document"],
+        "no-restricted-globals": ["warn", "document"],
         "no-shadow": ["warn"],
         "no-shadow-restricted-names": ["error"],
         "no-undef": ["error"],
