--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.8.RELEASE'
     compile 'org.springframework.boot:spring-boot-autoconfigure:1.1.8.RELEASE'
     compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+    compile 'org.glassfish.jersey.core:jersey-common:2.22.2'
     compile 'org.apache.derby:derby:10.11.1.1'
     compile 'org.hibernate:hibernate-entitymanager:4.3.6.Final'
     compile 'commons-cli:commons-cli:1.2'
