[#5] Server can now modify a playlist's name
Added server-side funtionality to modify a playlist's name.  Also...
 * Changed the location of the integration test databases to be the EM home.
 * When running the integration tests the gradle tasks will always be run (they will be forced to be not up-to-date)

--- a/config/int-test.properties
+++ b/config/int-test.properties
@@ -15,7 +15,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 em.music_directories=$classpath./test-songs
-em.database.home=$home/integration-databases/$timestamp
+em.database.home=integration-databases/$timestamp
 em.database.rollback_on_close=false
 em.metaflac_command=/usr/bin/metaflac
 em.server.port=8085
