[closes #76] Upgraded to ESLint v3.x
Upgraded ESLint from v2.x to v3.x.  Also...
 * Replaced JSCS with rules from ESLint

--- a/src/test/.eslintrc
+++ b/src/test/.eslintrc
@@ -13,6 +13,7 @@
     },
     
     "rules": {
+        "max-statements": ["off"],
         "no-empty-function": ["off"],
         "no-magic-numbers": ["off"]
     }
