--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,6 @@
     
     "rules": {
         # Possible Errors
-        "comma-dangle": ["warn", "never"],
         "no-cond-assign": ["error", "except-parens"],
         "no-console": ["warn"],
         "no-constant-condition": ["error"],
@@ -22,8 +21,8 @@
         "no-dupe-args": ["error"],
         "no-dupe-keys": ["error"],
         "no-duplicate-case": ["error"],
-        "no-empty": ["warn"],
         "no-empty-character-class": ["error"],
+        "no-empty": ["warn"],
         "no-ex-assign": ["error"],
         "no-extra-boolean-cast": ["error"],
         "no-extra-parens": ["warn"],
@@ -34,10 +33,12 @@
         "no-irregular-whitespace": ["error"],
         "no-negated-in-lhs": ["error"],
         "no-obj-calls": ["error"],
+        "no-prototype-builtins": ["off"],
         "no-regex-spaces": ["warn"],
         "no-sparse-arrays": ["warn"],
         "no-unexpected-multiline": ["error"],
         "no-unreachable": ["warn"],
+        "no-unsafe-finally": ["error"],
         "use-isnan": ["error"],
         "valid-jsdoc": ["off"],
         "valid-typeof": ["error"],
@@ -80,11 +81,11 @@
         "no-multi-spaces": ["off"],
         "no-multi-str": ["error"],
         "no-native-reassign": ["error"],
-        "no-new": ["error"],
         "no-new-func": ["error"],
         "no-new-wrappers": ["error"],
-        "no-octal": ["error"],
+        "no-new": ["error"],
         "no-octal-escape": ["error"],
+        "no-octal": ["error"],
         "no-param-reassign": ["off"],
         "no-proto": ["error"],
         "no-redeclare": ["error"],
@@ -124,6 +125,99 @@
         "no-unused-vars": ["warn", {"vars": "all", "args": "none"}],
         "no-use-before-define": ["error", {"functions": false, "classes": false}],
         
+        # Stylistic Issues
+        "array-bracket-spacing": ["warn"],
+        "block-spacing": ["warn", "never"],
+        "brace-style": ["warn"],
+        "camelcase": ["warn"],
+        "comma-dangle": ["warn", "never"],
+        "comma-spacing": ["warn"],
+        "comma-style": ["warn"],
+        "computed-property-spacing": ["warn"],
+        "consistent-this": ["warn", "that"],
+        "eol-last": ["warn", "unix"],
+        "func-names": ["off"],
+        "func-style": ["off"],
+        "id-blacklist": ["off"],
+        "id-length": ["off"],
+        "id-match": ["warn", "^_?([0-9A-Za-z_]+)*$"],
+        "indent": ["warn", 4, {"SwitchCase": 1}],
+        "jsx-quotes": ["warn"],
+        "key-spacing": ["off"],
+        "keyword-spacing": ["warn", {
+            "before": false,
+            "after": true,
+            "overrides": {
+                "catch": {"before": true, "after": false},
+                "default": {"before": true},
+                "else": {"before": true},
+                "finally": {"before": true},
+                "for": {"after": false},
+                "from": {"before": true},
+                "if": {"after": false},
+                "super": {"after": false},
+                "switch": {"after": false},
+                "this": {"before": true},
+                "while": {"after": false}
+            }
+        }],
+        "linebreak-style": ["warn", "unix"],
+        "lines-around-comment": ["off"],
+        "max-depth": ["warn", 4],
+        "max-len": ["warn", {"code": 120}],
+        "max-lines": ["off"],
+        "max-nested-callbacks": ["warn"],
+        "max-params": ["off"],
+        "max-statements-per-line": ["warn", {"max": 1}],
+        "max-statements": ["warn", 10, {"ignoreTopLevelFunctions": true}],
+        "multiline-ternary": ["off"],
+        "new-cap": ["warn"],
+        "new-parens": ["warn"],
+        "newline-after-var": ["warn"],
+        "newline-before-return": ["warn"],
+        "newline-per-chained-call": ["off"],
+        "no-array-constructor": ["error"],
+        "no-bitwise": ["off"],
+        "no-continue": ["warn"],
+        "no-inline-comments": ["off"],
+        "no-lonely-if": ["warn"],
+        "no-mixed-operators": ["off"],
+        "no-mixed-spaces-and-tabs": ["warn"],
+        "no-multiple-empty-lines": ["warn", {"max": 1, "maxBOF": 0, "maxEOF": 1}],
+        "no-negated-condition": ["warn"],
+        "no-nested-ternary": ["warn"],
+        "no-new-object": ["warn"],
+        "no-plusplus": ["off"],
+        "no-restricted-syntax": ["error", "WithStatement"],
+        "no-spaced-func": ["warn"],
+        "no-ternary": ["off"],
+        "no-trailing-spaces": ["warn", {"skipBlankLines": true}],
+        "no-underscore-dangle": ["off"],
+        "no-unneeded-ternary": ["warn"],
+        "no-whitespace-before-property": ["warn"],
+        "object-curly-newline": ["off"],
+        "object-curly-spacing": ["warn", "never"],
+        "object-property-newline": ["warn", {"allowMultiplePropertiesPerLine": true}],
+        "one-var-declaration-per-line": ["warn", "always"],
+        "one-var": ["warn", "never"],
+        "operator-assignment": ["warn"],
+        "operator-linebreak": ["warn"],
+        "padded-blocks": ["warn", "never"],
+        "quote-props": ["warn", "as-needed"],
+        "quotes": ["warn", "single", {"avoidEscape": true, "allowTemplateLiterals": false}],
+        "require-jsdoc": ["off"],
+        "semi-spacing": ["warn"],
+        "semi": ["warn"],
+        "sort-vars": ["off"],
+        "space-before-blocks": ["warn", "always"],
+        "space-before-function-paren": ["warn", "never"],
+        "space-in-parens": ["warn"],
+        "space-infix-ops": ["warn", {"int32Hint": true}],
+        "space-unary-ops": ["warn", {"words": true, "nonwords": false}],
+        "spaced-comment": ["warn", "always"],
+        "unicode-bom": ["warn"],
+        "wrap-regex": ["off"],
+        
         # ECMAScript 6
         "arrow-body-style": ["off"],
         "arrow-parens": ["warn", "always"],
@@ -147,6 +241,7 @@
         "prefer-spread": ["error"],
         "prefer-template": ["warn"],
         "require-yield": ["error"],
+        "sort-imports": ["off"],
         "template-curly-spacing": ["off"],
         "yield-star-spacing": ["off"]
     }
