--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-jscs": "^3.0.2",
+    "gulp-eslint": "3.0.1",
     "gulp-karma": "0.0.5",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.4.1",
