--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "3.3.7",
     "es6-shim": "^0.35.1",
-    "font-awesome": "^4.5.0",
+    "font-awesome": "4.6.3",
     "lodash": "4.12.0",
-    "ng2-bootstrap": "1.0.17",
+    "ng2-bootstrap": "1.0.24",
     "reflect-metadata": "^0.1.2",
     "rxjs": "5.0.0-beta.10",
     "zone.js": "^0.6.12"
